<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".red.RedFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/red"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/mixRedGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mixWithGreen"/>

        <Button
            android:id="@+id/mixRedBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mixWithBlue" />

    </LinearLayout>

</FrameLayout>